<resources>
    <string name="app_name">Easy易记</string>
    <string name="title_home">主页</string>
    <string name="title_account">账户</string>
    <string name="title_chart">图表</string>
    <string name="header_side_nav_1">Easy易记</string>
    <string name="header_side_nav_2">简单生活，简单记账</string>
    <string name="auto_record">自动记账</string>
    <string name="data">数据</string>
    <string name="data_backup_recover">数据备份与恢复</string>
    <string name="data_export">数据导出</string>
    <string name="data_import">数据导入</string>
    <string name="setting">设置</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <string name="calendar">日历</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="voice">语音</string>
    <string name="delete">删除</string>
    <string name="template">模板</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="submit">确认</string>
    <string name="add_leger">添加账本</string>
    <string name="add_leger_description">添加账本菜单按钮</string>
    <string name="save">保存</string>
    <string name="tag">标签</string>
    <string name="title_activity_category">CategoryActivity</string>


    <string name="confirm">确认</string>
    <string name="category_title">类别名称</string>
    <string name="category_belong_to_hint">请选择大类</string>
    <string name="add_account">新增账户</string>
    <string name="add_account_description">添加账户按钮</string>
    <string name="more">更多</string>
    <string name="more_description">更多菜单按钮</string>
    <string name="net_assets">净资产</string>
    <string name="total_assets">总资产</string>
    <string name="total_liability">总负债</string>
    <string name="choose_account_type">选择账户类型</string>
    <string name="basic_info">基本信息</string>
    <string name="input_account_title">请输入账户名称</string>
    <string name="account_icon">账户图标\n</string>
    <string name="currency">货币</string>
    <string name="account_balance">账户余额</string>
    <string name="account_settings">账户设置</string>
    <string name="fit_leger">适用账本</string>
    <string name="all">全部</string>
    <string name="other_info">其他信息</string>
    <string name="remark">备注</string>
    <string name="card_number">卡号</string>
    <string name="other_info_non_require">其他信息(选填)</string>
    <string name="cash">现金</string>
    <string name="sub_title">副标题</string>
    <string name="title">标题</string>
    <string name="add_bank_type">添加银行类型</string>
    <string name="search_bank_type">搜索银行种类</string>
    <string name="choose_bank_type">选择银行种类</string>
    <string name="account_type">账户类型</string>
    <string name="account_type_desc">账户类型说明</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_tag_0">0</string>
    <string name="key_tag_1">1</string>
    <string name="key_tag_2">2</string>
    <string name="key_tag_3">3</string>
    <string name="key_tag_4">4</string>
    <string name="key_tag_5">5</string>
    <string name="key_tag_6">6</string>
    <string name="key_tag_7">7</string>
    <string name="key_tag_8">8</string>
    <string name="key_tag_9">9</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_multiply">×</string>
    <string name="key_divide">/</string>
    <string name="key_backspace">CE</string>
    <string name="key_all_clear">AC</string>
    <string name="key_brackets_left">(</string>
    <string name="key_brackets_right">)</string>
    <string name="key_dot">•</string>
    <string name="key_equal">＝</string>
    <string name="choose_currency">选择货币类型</string>
    <string name="expand_desc">展开</string>
    <string name="key_tag_all_clear">AC</string>
    <string name="key_tag_brackets_left">(</string>
    <string name="key_tag_brackets_right">)</string>
    <string name="key_tag_divide">/</string>
    <string name="key_tag_multiply">*</string>
    <string name="key_tag_minus">-</string>
    <string name="key_tag_dot">.</string>
    <string name="key_tag_plus">+</string>
    <string name="key_tag_backspace">CE</string>
    <string name="key_tag_equal">=</string>
    <string name="pick_date">选择日期</string>
    <string name="click_to_remark">点击填写备注</string>
    <string name="choose_leger">选择账本</string>
    <string name="key_record_again">再记</string>
    <string name="key_tag_record_again">RECORD_AGAIN</string>
    <string name="key_done">完成</string>
    <string name="cal_error_info">输入错误！</string>
    <string name="input_tips_info">请先输入金额</string>
    <string name="zero_hint">0.00</string>
    <string name="time">时间</string>
    <string name="role">角色</string>
    <string name="retailer">商家</string>
    <string name="refund">退款</string>
    <string name="reimburse">报销</string>
    <string name="pick_time">选择时间</string>
    <string name="pick_role">选择角色</string>
    <string name="pick_store">选择商家</string>
    <string name="pick_photo">选择图片</string>
    <string name="receive_payment">收付款</string>
    <string name="statistics">统计</string>
    <string name="pick_account">选择账户</string>
    <string name="pick_tags">选择标签</string>
    <string name="is_refund">是否退款</string>
    <string name="is_reimburse">是否报销</string>
    <string name="pick_account_desc">选择要扣除金额的账户,且此后将此账户作为默认扣除金额账户</string>
    <string name="pick_role_desc">选择记账人角色，为自己、朋友、家人记账</string>
    <string name="add_role">新增角色</string>
    <string name="pick_store_desc">从这里选择您最常光顾的商家，以便了解您在该商家处的开支</string>
    <string name="add_store">新增商家</string>
    <string name="pick_tag">选择标签</string>
    <string name="pick_tag_desc">为您的账目做标记</string>
    <string name="add_tag">添加标签</string>
    <string name="add_tag_hint">标签名称</string>
    <string name="color_picker_tips">在颜色轮盘上选择想要的标签颜色</string>
    <string name="color">颜色</string>
    <string name="hex_code_range">0123456789abcdefABCDEF</string>
    <string name="alpha">透明度</string>
    <string name="brightness">明亮度</string>
    <string name="pick_currency">选择币种</string>
    <string name="add_currency">添加币种</string>
    <string name="pick_currency_desc">选择记录的币种</string>
    <string name="pick_statistics">统计</string>
    <string name="leger_desc">账本描述</string>
    <string name="leger_title">账本名称</string>
    <string name="desc_info">描述信息</string>
    <string name="category_settings">类别设置</string>
    <string name="add">添加</string>
    <string name="input_category_title">请输入类型名称</string>
    <string name="default_icon_res_name">category_othe_others</string>
    <string name="change_account">交换账户</string>
    <string name="transfer_in_account">转入账户</string>
    <string name="transfer_out_account">转出账户</string>
    <string name="expand_less">收起</string>
    <string name="clear_text">清除文本</string>
    <string name="role_manager">角色管理</string>
    <string name="back">返回</string>
    <string name="name">名称</string>
    <string name="desc">描述</string>
    <string name="store_manage">店家管理</string>
    <string name="operation_menu_1">明细</string>
    <string name="operation_menu_2">编辑</string>
    <string name="operation_menu_3">删除</string>
    <string name="operation">操作</string>
    <string name="tag_manage">标签管理</string>
    <string name="currency_code">货币代码</string>
    <string name="currency_title">货币名称</string>
    <string name="selected_currency">选择币种</string>
    <string name="currency_manage">币种管理</string>
    <string name="resource_bottom_title">资源选择</string>
    <string name="edit">编辑</string>
    <string name="calculater">计算器</string>
    <string name="navigate_prev">上一个</string>
    <string name="navigate_next">下一个</string>
    <string name="select_leger">选择账本</string>
    <string name="wechat_screenshot_import">微信截图导入</string>
    <string name="alipay_screenshot_import">支付宝截图导入</string>
    <string name="export">导出</string>


</resources>