<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/auto_record_item"
        android:icon="@drawable/menu_ic_auto_record"
        android:title="@string/auto_record"/>
    <item
        android:id="@+id/settings_fragment"
        android:icon="@drawable/menu_ic_setting"
        android:title="@string/setting"/>
    <item
        android:id="@+id/data_item"
        android:title="@string/data">
        <menu>
            <item
                android:id="@+id/data_backup_recover"
                android:icon="@drawable/menu_ic_backup_recover"

                android:title="@string/data_backup_recover"/>
            <item
                android:id="@+id/data_import_export"
                android:icon="@drawable/menu_ic_import_export"
                android:title="@string/data_import_export"/>
        </menu>
    </item>

</menu>