<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AddAccountDialog">

    <include
        android:id="@+id/app_bar_layout"
        layout="@layout/layout_confirm_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:scrollbars="none"

        app:layout_constraintBottom_toTopOf="@+id/add_account_save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/basic_info" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_account_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_account_title"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_account_icon_cons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground"

                android:clickable="true"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/account_icon"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/add_account_icon_im"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/add_account_icon_im" />

                <ImageView
                    android:id="@+id/add_account_icon_im"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/account_ic_wechat"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                    app:layout_constraintEnd_toStartOf="@+id/imageView8"
                    app:layout_constraintTop_toTopOf="@+id/imageView8" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_account_currency_cons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground"

                android:clickable="true"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/currency"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/currency"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                    app:layout_constraintEnd_toStartOf="@+id/imageView9"
                    app:layout_constraintTop_toTopOf="@+id/imageView9" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_account_balance_cons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground"

                android:clickable="true"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/account_balance"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/add_account_balance_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="0.00"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                    app:layout_constraintEnd_toStartOf="@+id/imageView10"
                    app:layout_constraintTop_toTopOf="@+id/imageView10" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/account_settings" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_account_fit_leger_cons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?selectableItemBackground"

                android:clickable="true"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/fit_leger"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/all"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                    app:layout_constraintEnd_toStartOf="@+id/imageView11"
                    app:layout_constraintTop_toTopOf="@+id/imageView11" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_arrow_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/other_info_non_require" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_account_remark_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desc_info"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_account_card_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_account_other_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remark"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_account_delete_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_account_save_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_account_save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_account_delete_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>